Use OpenAPI generator for translating search results

--- a/WatchList/Localizable.xcstrings
+++ b/WatchList/Localizable.xcstrings
@@ -2,6 +2,7 @@
   "sourceLanguage" : "en",
   "strings" : {
     "Movies" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
