Create a Swipe action that can later add a movie to a watch list

--- a/WatchList/Resources/Localizable.xcstrings
+++ b/WatchList/Resources/Localizable.xcstrings
@@ -103,6 +103,23 @@
           }
         }
       }
+    },
+    "toWatchlist" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "zu Watchliste"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "to Watchlist"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
