--- a/WatchList/Resources/Localizable.xcstrings
+++ b/WatchList/Resources/Localizable.xcstrings
@@ -120,6 +120,17 @@
           }
         }
       }
+    },
+    "Watchlist" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Watchlist"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
